Fixed overflow of email in history timeline

--- a/public/src/student/timeline/timeline.css
+++ b/public/src/student/timeline/timeline.css
@@ -55,3 +55,6 @@
   left: 1.5em;
   position: absolute;
 }
+.timeline-title::-webkit-scrollbar {
+  background: transparent;
+}
